# shoot

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  README.md  README.rst  eddies2d.py  plot_eddy_tracking_duacs.py  pyproject.toml  test.nc  test_CCA_acoustique.py  track.py
.github/workflows/: docs.yml  python-package-conda.yml
data/: eddies.detect.nc  eddies_med_test1.nc  eddies_med_test2.nc  eddies_mest_test_merged.nc  gigatl1-1000m.nc  jan2024_ionian_sea_duacs.nc  track_ionian_sea_duacs_jan2024.nc
docs/: algos.eddies.rst  algos.rst  cli.rst  cli.shoot.eddies.detect.rst  cli.shoot.eddies.diags.rst  cli.shoot.eddies.rst  cli.shoot.eddies.track-detected.rst  cli.shoot.eddies.track.rst  cli.shoot.rst  conf.py  indepth.rst  indepth_eddies.rst  indepth_eddies_detection.rst  indepth_eddies_tracking.rst  indepth_fronts.rst  indepth_metadata.rst  indepth_profiles.rst  index.rst  install.rst  lib.rst  metaspec.rst  quickstart.rst  sg_execution_times.rst
docs/ext/: genlogos.py
env/: environment.yml
examples/: README.rst  analyses_netcdf.py  example_eddies_tracking_duacs_med.py  example_shoot_hydrology.py  plot_cmcc_front.py  plot_diags_prior_eddies.py  plot_eddy_detect_3d.py  plot_eddy_detect_croco.py  plot_eddy_detect_gigatl.py  plot_eddy_detect_sat.py  plot_eddy_tracking_duacs.py  plot_hydrology_diags.py  plot_profil_eddies.py  plot_shoot_netcdf.py  test.nc  tracking_merged_eddies.py
notebooks/: Shoot_degub.ipynb
shoot/: __init__.py  _version.py  acoustic.py  acoustique.py  cf.py  cli.py  contours.py  dpc.py  dyn.py  eddies.py  eddies3d.py  eddies_save.py  fit.py  geo.py  grid.py  hydrology.py  log.py  meta.cfg  meta.py  num.py  plot.py  rossby.py  samples.py  samples.txt  streamline.py  track.py
shoot/eddies/: __init__.py  associate.py  eddies2d.py  eddies3d.py  track.py
shoot/front/: algos.py
shoot/profiles/: __init__.py  download.py  profiles.py
spyder-jbroust/: tmp154n2ds2  tmp_xcrbprd  tmpcdjndcsc  tmpiwwcejjz  tmpugd_d6yj  tmpupixrle4  tmpv2letkh7  tmpybsnbh7n
tests/: test_acoustic.py  test_associate.py  test_cf.py  test_contours.py  test_dyn.py  test_fit.py  test_geo.py  test_grid.py  test_log.py  test_meta.py  test_num.py  test_plot.py  test_profiles.py  test_streamline.py  test_track.py
