[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shoot"
version = "0.0.0"
description = "SHom Ocean Objects Tracker"
requires-python = ">=3.10"
dependencies = [
    "cf_xarray",
    "colorlog",
    "contourpy",
    "matplotlib-base",
    "netCDF",
    "scipy"
    "xarray",
]
authors = [
  {name = "Stéphane Raynaud", email = "stephane.raynaud@shom.fr"},
  {name = "Jean-Baptiste Roustan", email = "jean.baptiste.roustan@shom.fr"},
]
maintainers = [
  {name = "Stéphane Raynaud", email = "stephane.raynaud@shom.fr"}
]
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
docs = [
  "cartopy",
  "matplotlib",
  "owslib",
  "sphinx",
  "sphinx-argparse",
  "sphinx-book-theme",
  "sphinx-gallery",
  "sphinxcontrib-programoutput",
]

[project.entry-points.console_scripts]
shoot = "shoot.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shoot"]
include-package-data = true

[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "shoot/_version.py"
tag_regex= "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true
