
[project]
name = "shoot"
description = "SHom Ocean Objects Tracker"
requires-python = ">=3.10"
dependencies = [
    "argopy>=1.4",
    "cartopy",
    "cmocean",
    "colorlog",
    "contourpy",
    "gsw",
    "matplotlib",
    "netCDF4",
    "psutil",
    "owslib",
    "scipy",
    "xarray",
    "xoa",
]
authors = [
  {name = "Stéphane Raynaud", email = "stephane.raynaud@shom.fr"},
  {name = "Jean-Baptiste Roustan", email = "jean.baptiste.roustan@shom.fr"},
]
maintainers = [
  {name = "Stéphane Raynaud", email = "stephane.raynaud@shom.fr"}
]
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-xdist",
  "ruff",
  "pre-commit",
]
docs = [
  "sphinx",
  "sphinx-argparse",
  "sphinx-book-theme",
  "sphinx-gallery",
  "sphinxcontrib-programoutput",
]

[project.entry-points.console_scripts]
shoot = "shoot.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shoot"]
include-package-data = true

[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "shoot/_version.py"
tag_regex= "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
# Equivalent to black's skip-string-normalization
quote-style = "preserve"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_scheduler: Tests requiring real scheduler",
]
log_cli = false
log_cli_level = "INFO"

# Bandit configuration
[tool.bandit]
exclude_dirs = ["/tests", "/build", "/dist"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
